--- a/.github/actions/prepare-rtl/action.yml
+++ b/.github/actions/prepare-rtl/action.yml
@@ -31,10 +31,11 @@ runs:
 
     - name: Run RTL build if not cached
       run: |
+        conda activate ${{ env.conda-env-name-no-time }}-$(date --date "${{ env.workflow-timestamp }}" +%Y%m%d)
         if [[ "${{ steps.rtl-build-id.outputs.cache-hit }}" != 'true' ]]; then
           echo "Cache miss on ${{ inputs.group-key }}-${{ github.ref }}-${{ github.sha }}"
           ./.github/scripts/${{ inputs.build-script }} ${{ inputs.group-key }} ${{ inputs.build-type }}
         else
           echo "Cache hit do not rebuild RTL for ${{ inputs.group-key }}"
         fi
-      shell: bash
+      shell: bash -leo pipefail {0}
