--- a/scripts/conda-requirements.yaml
+++ b/scripts/conda-requirements.yaml
@@ -21,6 +21,7 @@ dependencies:
   - gxx=10
   - binutils
   - conda-gcc-specs
+  - gawk
 
   # if building riscv-toolchain from source, we need to use bison=3.4 until we have
   # https://github.com/riscv-collab/riscv-binutils-gdb/commit/314ec7aeeb1b2e68f0d8fb9990f2335f475a6e33
