--- a/.github/workflows/chipyard-run-tests.yml
+++ b/.github/workflows/chipyard-run-tests.yml
@@ -17,6 +17,7 @@ env:
   JVM_OPTS: -Xmx3200m # Customize the JVM maximum heap limit
   conda-env-name-no-time: cy-${{ github.run_id }}
   workflow-timestamp: ${{ github.event.pull_request.updated_at }}
+  ci-docker-image: ucbbar/chipyard-ci-image:dccef83
 
 jobs:
   cancel-prior-workflows:
@@ -67,7 +68,7 @@ jobs:
     if: needs.change-filters.outputs.needs-rtl == 'true'
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -93,7 +94,7 @@ jobs:
     if: needs.change-filters.outputs.needs-rtl == 'true'
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -118,7 +119,7 @@ jobs:
     needs: change-filters
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -147,7 +148,7 @@ jobs:
     if: needs.change-filters.outputs.needs-rtl == 'true'
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -171,7 +172,7 @@ jobs:
     if: needs.change-filters.outputs.needs-rtl == 'true'
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -398,7 +399,7 @@ jobs:
     needs: prepare-chipyard-cores
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -422,7 +423,7 @@ jobs:
     needs: prepare-chipyard-cores
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -446,7 +447,7 @@ jobs:
     needs: prepare-chipyard-cores
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -470,7 +471,7 @@ jobs:
     needs: prepare-chipyard-cores
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -494,7 +495,7 @@ jobs:
     needs: prepare-chipyard-cores
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -518,7 +519,7 @@ jobs:
     needs: prepare-chipyard-cores
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -542,7 +543,7 @@ jobs:
     needs: prepare-chipyard-accels
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -566,7 +567,7 @@ jobs:
     needs: prepare-chipyard-peripherals
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -590,7 +591,7 @@ jobs:
     needs: prepare-chipyard-peripherals
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -614,7 +615,7 @@ jobs:
     needs: prepare-chipyard-peripherals
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -638,7 +639,7 @@ jobs:
     needs: prepare-chipyard-peripherals
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -662,7 +663,7 @@ jobs:
     needs: prepare-chipyard-accels
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -686,7 +687,7 @@ jobs:
     needs: prepare-chipyard-accels
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -710,7 +711,7 @@ jobs:
     needs: prepare-chipyard-accels
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -734,7 +735,7 @@ jobs:
     needs: prepare-chipyard-accels
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -758,7 +759,7 @@ jobs:
     needs: prepare-chipyard-accels
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -782,7 +783,7 @@ jobs:
     needs: prepare-chipyard-accels
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -806,7 +807,7 @@ jobs:
     needs: prepare-chipyard-tracegen
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -830,7 +831,7 @@ jobs:
     needs: prepare-chipyard-tracegen
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -854,7 +855,7 @@ jobs:
     needs: prepare-chipyard-other
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
@@ -878,7 +879,7 @@ jobs:
     needs: prepare-chipyard-other
     runs-on: ubuntu-latest
     container:
-      image: ucbbar/chipyard-ci-image:dccef83
+      image: ${{ env.ci-docker-image }}
       options: --entrypoint /bin/bash
     steps:
       - name: Delete old checkout
